--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,19 @@
-/*  your css code here. If applicable */
+.center-box{
+	background-color: lightblue;
+border: 2px solid black;
+	position: absolute;
+	top 50%;
+	left 50%;
+	transform: translate(-50%, -50%);
+	text-align: center;
+	width:200px;
+	height:200px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.center p{
+	font-size: 24px;
+	font-weight: bold;
+margin: 0;
+}
